--- a/about.html
+++ b/about.html
@@ -29,13 +29,11 @@
     <link rel="stylesheet" href="/scss/variables.css">
     <link rel="stylesheet" href="/scss/critical.css">
     <link rel="stylesheet" href="/scss/main.css" media="all" onload="this.media='all'; this.onload=null;">
-    <link rel="stylesheet" href="/scss/swiper/swiper-bundle.min.css">
 
     <!-- Preload -->
     <link rel="preload" as="image" href="/assets/lawnLogo.png">
     <link rel="preload" as="font" type="font/woff2" href="/fonts/GeneralSans-Light.woff2" crossorigin="">
     <link rel="preload" as="font" type="font/woff2" href="/fonts/GeneralSans-Regular.woff2" crossorigin="">
-
 
     <title>Landscaping Demo by RR</title>
 </head>
@@ -67,7 +65,7 @@
         <!-- Page Heading -->
         <section id="standard-heading">
             <img aria-hidden='true' src="/assets/twig.png" alt="twig" class='abs-head' width="100" height="139">
-            <h1>Our Portfolio</h1>
+            <h1>About Us</h1>
             <picture>
                 <source media="(max-width: 600px)" srcset="/assets/img08m.webp">
                 <source media="(min-width: 601px)" srcset="/assets/img08l.webp">
@@ -76,116 +74,44 @@
             <div class="overlay"></div>
         </section>
         <!-- close -->
-        <!-- Gallery Section Start -->
-        <section id="masonry-gallery">
-            <!-- Gallery Start -->
-            <div class="masonry">
-                <div class="col">
-                    <div class="item">
+
+        <!-- Page Heading -->
+        <section id="about">
+            <div class="container">
+                <div class="item">
+                    <div class="img-box">
                         <picture>
                             <source media="(max-width: 600px)" srcset="/assets/img02m.webp">
                             <source media="(min-width: 601px)" srcset="/assets/img02.webp">
                             <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img02.jpeg" alt=""
                                 width="276" height="132">
                         </picture>
-                    </div>
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img05m.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img05m.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img05m.png" alt="house"
-                                width="300" height="166">
-                        </picture>
-                    </div>
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img02m.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img02.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img02.jpeg" alt=""
-                                width="276" height="132">
-                        </picture>
-                    </div>
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img04m.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img04m.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img04m.webp" alt=""
-                                width="300" height="166">
-                        </picture>
+                        <div class="qual">
+                            <span>20</span>
+                            <p>Years of<br>Experience</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img05m.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img05m.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img05m.png" alt="house"
-                                width="300" height="166">
-                        </picture>
-                    </div>
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img06.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img06.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img06.webp" alt="house"
-                                width="300" height="166">
-                        </picture>
-                    </div>
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img02m.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img02m.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img02m.webp"
-                                alt="house" width="300" height="166">
-                        </picture>
-                    </div>
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img05m.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img05m.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img05m.png" alt="house"
-                                width="300" height="166">
-                        </picture>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img04m.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img04m.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img04m.webp" alt=""
-                                width="300" height="166">
-                        </picture>
-                    </div>
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img02m.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img02m.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img02m.webp"
-                                alt="house" width="300" height="166">
-                        </picture>
-                    </div>
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img06.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img06.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img06.webp" alt="house"
-                                width="300" height="166">
-                        </picture>
-                    </div>
-                    <div class="item">
-                        <picture>
-                            <source media="(max-width: 600px)" srcset="/assets/img04m.webp">
-                            <source media="(min-width: 601px)" srcset="/assets/img04m.webp">
-                            <img aria-hidden='true' loading='lazy' decoding="async" src="/assets/img04m.webp" alt=""
-                                width="300" height="166">
-                        </picture>
+                <div class="context">
+                    <div class="header">
+                        <span>Who We Are</span>
+                        <h2>Landscape Company</h2>
+                        <div class="decor">
+                            <img src="/assets/lanscape.svg" alt="" width="20" height="20">
+                            <div class="line"></div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum, at diam iaculis facilisi
+                            fusce. Volutpat sit ornare vitae, tellus massa habitant senectus viverra. In tincidunt
+                            adipiscing quam ultrices a. Quis sapien aliquet integer odio quam justo, tempus. Quis
+                            vulputate elit in erat ullamcorper aliquam nulla.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum, at diam iaculis facilisi
+                            fusce. Volutpat sit ornare vitae, tellus massa habitant senectus viverra. In tincidunt
+                            adipiscing quam ultrices a. Quis sapien aliquet integer odio quam justo, tempus. Quis
+                            vulputate elit in erat ullamcorper aliquam nulla.</p>
                     </div>
                 </div>
             </div>
-
         </section>
-        <!-- Gallery Section End -->
         <!-- Mini Contact Start -->
         <section id="small-contact" class='last-misc' style="margin-top: unset;">
             <div class="heading">
@@ -264,7 +190,6 @@
     <!-- Scripts -->
     <script src="/scripts/swiper-bundle.min.js"></script>
     <script src='scripts/main.js'></script>
-    <script src='scripts/gallery.js'></script>
 </body>
 
 </html>
