--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,6 @@
     <link rel="stylesheet" href="/scss/variables.css">
     <link rel="stylesheet" href="/scss/critical.css">
     <link rel="stylesheet" href="/scss/main.css" media="all" onload="this.media='all'; this.onload=null;">
-    <link rel="stylesheet" href="/scss/swiper/swiper-bundle.min.css">
 
     <!-- Preload -->
     <link rel="preload" as="image" href="/assets/lawnLogo.png">
@@ -180,9 +179,9 @@
             <div class="col">
                 <h3>Site Navigation</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="gallery.html">Portfolio</a></li>
                     <li><a href='contact.html'>Contact</a></li>
                     <li><a href="services.html">Services</a></li>
                 </ul>
