--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     Scelerisque feugiat fringilla nisi adipiscing ut neque, tristique.
                 </p>
                 <div class="btns">
-                    <a href="#" class="btn">About Us</a>
+                    <a href="about.html" class="btn">About Us</a>
                     <a href="contact.html" class="btn">Contact us</a>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                     </p>
                     <div class="btns">
                         <a href="contact.html" class="btn">Contact us</a>
-                        <a href="#" class="btn">About Us</a>
+                        <a href="about.html" class="btn">About Us</a>
                     </div>
                 </div>
             </div>
@@ -468,9 +468,9 @@
             <div class="col">
                 <h3>Site Navigation</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="gallery.html">Portfolio</a></li>
                     <li><a href='contact.html'>Contact</a></li>
                     <li><a href="services.html">Services</a></li>
                 </ul>
