--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="navlinks-overlay"></div>
             <ul class="nav-links">
                 <li class="nav-link active"><a href="index.html">Home</a></li>
-                <li class="nav-link"><a href="menu.html">Services</a></li>
+                <li class="nav-link"><a href="index.html#home-services">Services</a></li>
                 <li class="nav-link"><a href="gallery.html">Portfolio</a></li>
                 <li class="nav-link"><a href="about.html">About Us</a></li>
                 <li class="nav-link"><a href="contact.html">Contact Us</a></li>
@@ -472,7 +472,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="gallery.html">Portfolio</a></li>
                     <li><a href='contact.html'>Contact</a></li>
-                    <li><a href="services.html">Services</a></li>
+                    <li class="nav-link"><a href="index.html#home-services">Services</a></li>
                 </ul>
             </div>
             <div class="col">
