--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                     </form>
                 </div>
                 <div class="info-container">
-                    <h3>Construction Name</h3>
+                    <h3>Company Name</h3>
                     <div class="para">
                         <p>Feel free to contact us for any construction services. Give us a call for immediate help.</p>
                     </div>
@@ -142,7 +142,7 @@
                             </a>
                             <div>
                                 <p>Business Email</p>
-                                <a href="#" class='phone'>construction@gmail.com</a>
+                                <a href="#" class='phone'>landscaping@gmail.com</a>
                             </div>
                         </li>
                     </ul>
