new process section

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             <button class="hamburger" aria-label="Navigation Toggle">
                 <span class="hamburger-inner"> </span>
             </button>
-            <button class="btn btn-primary nav-btn order-trigger">Request An Estimate</button>
+            <a href='contact.html' class="btn nav-btn">Request An Estimate</a>
         </nav>
     </header>
     <!-- Navigation End -->
@@ -108,6 +108,50 @@
                             fusce. Volutpat sit ornare vitae, tellus massa habitant senectus viverra. In tincidunt
                             adipiscing quam ultrices a. Quis sapien aliquet integer odio quam justo, tempus. Quis
                             vulputate elit in erat ullamcorper aliquam nulla.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="process">
+            <div class="heading">
+                <span>Our Process</span>
+                <h2>We Get Shit Done With <br>Our Proven Process</h2>
+            </div>
+            <div class="container">
+                <div class="item">
+                    <div class="num" data-num="1">
+                        <img src="/assets/shovels.svg" alt="" width="25" height="25">
+                    </div>
+                    <div class="text">
+                        <h3>Lorem ipsum dolor sit.</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, voluptate.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="num" data-num="2">
+                        <img src="/assets/shovels.svg" alt="" width="25" height="25">
+                    </div>
+                    <div class="text">
+                        <h3>Lorem ipsum dolor sit.</h3>
+                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, voluptate.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="num" data-num="3">
+                        <img src="/assets/shovels.svg" alt="" width="25" height="25">
+                    </div>
+                    <div class="text">
+                        <h3>Lorem ipsum dolor sit.</h3>
+                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, voluptate.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="num" data-num="4">
+                        <img src="/assets/shovels.svg" alt="" width="25" height="25">
+                    </div>
+                    <div class="text">
+                        <h3>Lorem ipsum dolor sit.</h3>
+                          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, voluptate.</p>
                     </div>
                 </div>
             </div>
