--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
             <button class="hamburger" aria-label="Navigation Toggle">
                 <span class="hamburger-inner"> </span>
             </button>
-            <button class="btn btn-primary nav-btn order-trigger">Request An Estimate</button>
+            <a href='contact.html' class="btn nav-btn">Request An Estimate</a>
         </nav>
     </header>
     <!-- Navigation End -->
