--- a/gallery.html
+++ b/gallery.html
@@ -204,6 +204,12 @@
                 <span class="screen-reader-text">Contact</span>
             </button>
         </div>
+        <div class="fixed">
+            <button class="top-link hide" id="js-top">
+                <img src="assets/up-arrow.svg" alt="up arrow" class="" width='22' height='22' />
+                <span class="screen-reader-text">Contact</span>
+            </button>
+        </div>
     </main>
     <!-- Main End -->
     <!-- Footer -->
