--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
         <section id="process">
             <div class="heading">
                 <span>Our Process</span>
-                <h2>We Get Shit Done With <br>Our Proven Process</h2>
+                <h2>We Get Things Done With <br>Our Proven Process</h2>
             </div>
             <div class="container">
                 <div class="item">
