--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <div class="card">
                 <div class="head">
                     <picture>
-                        <source media="(max-width: 600px)" srcset="/assets/img02m.webp">
-                        <source media="(min-width: 601px)" srcset="/assets/img02.webp">
-                        <img aria-hidden='true' decoding="async" src="/assets/img02.jpeg" alt="" width="276" height="132">
+                        <source media="(max-width: 600px)" srcset="/assets/img03m.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/img03m.webp">
+                        <img src="/assets/img03m.webp" alt="house" width="300" height="166">
                     </picture>
                 </div>
                 <div class="body">
