--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@
         <div id="why-over">
             <div class="img-container">
                 <picture>
-                    <source media="(max-width: 600px)" srcset="/assets/img09.jpeg">
-                    <source media="(min-width: 601px)" srcset="/assets/img09.jpeg">
-                    <img aria-hidden='true' decoding="async" src="/assets/img09.jpeg" alt="" width="276" height="132">
+                    <source media="(max-width: 600px)" srcset="/assets/img09.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/img09.webp">
+                    <img aria-hidden='true' decoding="async" src="/assets/img09.webp" alt="" width="276" height="132">
                 </picture>
             </div>
             <div class="text">
