more space for copywriting

--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
                         orci suspendisse. Vitae nisl euismod consectetur sed sit molestie. Integer porttitor tellus
                         vestibulum dolor mi venenatis turpis.
                     </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
+                        nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor sed
+                        orci suspendisse. Vitae nisl euismod consectetur sed sit molestie. Integer porttitor tellus
+                        vestibulum dolor mi venenatis turpis.
+                    </p>
                     <div class="btns">
                         <a href="contact.html" class="btn">Contact us</a>
                         <a href="about.html" class="btn">About Us</a>
@@ -248,6 +254,10 @@
                 <div class="heading">
                     <span>Why Us</span>
                     <h2>Why you should choose us as your landscapers</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
+                        nibh
+                        donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor sed orci
+                        suspendisse.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
                         nibh
                         donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor sed orci
